<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.fininfocomtask.model.User" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/dimen_16"
            android:layout_margin="@dimen/dimen_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_16">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblName"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:text="@string/user_s_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/edName"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:text="@{user.name}"
                    app:layout_constraintStart_toEndOf="@+id/lblName"
                    app:layout_constraintTop_toTopOf="@+id/lblName"
                    tools:text="Hello" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblAge"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:text="@string/age"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblName" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/edAge"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:text="@{String.valueOf(user.age)}"
                    app:layout_constraintStart_toEndOf="@+id/lblAge"
                    app:layout_constraintTop_toTopOf="@+id/lblAge"
                    tools:text="Hello" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblCity"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:text="@string/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblAge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/edCity"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:text="@{user.city}"
                    app:layout_constraintStart_toEndOf="@+id/lblCity"
                    app:layout_constraintTop_toTopOf="@+id/lblCity"
                    tools:text="Hello" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</layout>